dark mode fixed

--- a/src/globals.css
+++ b/src/globals.css
@@ -78,5 +78,11 @@
 
 a.active {
   opacity: 0.7;
+}
+
+.stylesElementsDark {
+
+  
+  
   
 }
